--- a/style.css
+++ b/style.css
@@ -935,13 +935,17 @@ li {
 
 
 .testimonial {
-    padding: 80px 0;
+    padding-top: 80px;
+    width: 100%;
+  
 }
 
 .body_test {
         font-family: 'Montserrat', sans-serif;
-        background-color: #f6f3ea;
+        background-color:  #f6f3ea;
+        margin-right: -35px;
     }
+
 
 .sec-heading {
     margin-bottom: 40px;
