--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav .nav-list .nav-link {
 }
 
 .bg-dark {
-    background-color: transparent !important;
+      background-color: rgba(255, 255, 255, 0.548) !important;
 
 }
 
