--- a/style.css
+++ b/style.css
@@ -971,7 +971,7 @@ li {
     font-size: 40px;
 }
 .single-box {
-    width: 300px;
+    width: 330px;
     height: 280px;
     margin-left: 10px;
     border: 3px solid #e6f0fa;
@@ -979,7 +979,7 @@ li {
     background: #fff;
 }
 .img-area {
-    margin: 35px 10px 10px 0;
+    margin: 35px 20px 20px 0;
 }
 .single-box img {
     max-width: 80px;
@@ -1291,7 +1291,7 @@ textarea {
     text-align: center;
  
     height: 100px;
-    width: 390px;
+    width: 100%;
     margin-left: 0px;
 }
 
