--- a/style.css
+++ b/style.css
@@ -971,7 +971,7 @@ li {
     font-size: 40px;
 }
 .single-box {
-    width: 330px;
+    width: 345px;
     height: 280px;
     margin-left: 10px;
     border: 3px solid #e6f0fa;
@@ -1046,7 +1046,9 @@ li {
 
 
 
-
+#SERVICES {
+    width: 100%;
+}
 
 
 .h1_services {
@@ -1120,7 +1122,7 @@ li {
 
 .contact_img {
     background-image: url("Images/rosecutted.jpg");
-    width: 390px;
+    width: 100%;
     background-size: cover;
     overflow: hidden;
     position: relative;
