--- a/style.css
+++ b/style.css
@@ -1072,9 +1072,9 @@ li {
     margin-left: 16%;
     margin-right: 16%;
     border: 2px solid rgb(173, 133, 30);
-	padding: 10px 20px 20px;
-	border-radius: 20px;
-	background: rgb(236, 224, 208);
+    padding: 10px 20px 20px;
+    border-radius: 20px;
+    background: rgb(247 246 243 / 48%);
     margin-bottom: 3%;
 
 }
