--- a/style.css
+++ b/style.css
@@ -1060,10 +1060,9 @@ li {
     font-family: 'Dancing Script';
     text-align: center;
     font-size: 45px;
-    color: rgb(94, 75, 78);
-    margin-top: 20%;
-
-    padding-bottom: 3%;
+    color: rgb(63 52 54 / 85%);
+    margin-top: 26%;
+    padding-bottom: 5%;
 
 }
 
